--- a/estilos/style.css
+++ b/estilos/style.css
@@ -33,3 +33,11 @@ section#telefone{
     width: 500px;
     background: url(../imagens/frame-iphone.png) no-repeat ;
 }
+iframe#tela{
+    position: relative;
+    top: 81px;
+    left: 22px;
+    width: 267px;
+    height: 471px;
+    
+}
